fixing svgz issue.

--- a/book/css/style.css
+++ b/book/css/style.css
@@ -870,7 +870,7 @@
     content: " ";
     filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
     opacity: 0;
-    background: url('../img/g_arrow.svgz?1385934699') no-repeat;
+    background: url('../img/g_arrow.svg?1385934589') no-repeat;
     -moz-background-size: 100% 100%;
     -o-background-size: 100% 100%;
     -webkit-background-size: 100% 100%;
